--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,3 +32,8 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.3
 URL: https://github.com/jonotuke/spIBDerverse
 BugReports: https://github.com/jonotuke/spIBDerverse/issues
+Imports: 
+    dplyr,
+    igraph,
+    janitor,
+    readr
