--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,10 +30,16 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.3
-URL: https://github.com/jonotuke/spIBDerverse
+URL: https://github.com/jonotuke/spIBDerverse, https://jonotuke.github.io/spIBDerverse/
 BugReports: https://github.com/jonotuke/spIBDerverse/issues
 Imports: 
     dplyr,
     igraph,
     janitor,
     readr
+Suggests: 
+    knitr,
+    rmarkdown,
+    quarto
+VignetteBuilder: 
+    quarto
