--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,4 +4,5 @@ export(create_ibd_network)
 export(get_connected_graph)
 export(get_network_measures)
 export(plot_ggnet)
+export(plot_leaflet)
 importFrom(rlang,":=")
