--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,11 +33,15 @@ RoxygenNote: 7.3.3
 URL: https://github.com/jonotuke/spIBDerverse, https://jonotuke.github.io/spIBDerverse/
 BugReports: https://github.com/jonotuke/spIBDerverse/issues
 Imports: 
+    broom,
     dplyr,
+    ergm,
+    forcats,
     ggnetwork,
     ggplot2,
     harrypotter,
     igraph,
+    intergraph,
     janitor,
     leaflet,
     purrr,
@@ -45,7 +49,9 @@ Imports:
     rlang,
     sf,
     shiny,
-    stringr
+    stringr,
+    tidyr,
+    tidytext
 Suggests: 
     knitr,
     rmarkdown,
