Fixed fill for plot_ggnet

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,10 +9,12 @@ export(get_ergm_bic)
 export(get_ergm_fc)
 export(get_ergms)
 export(get_network_measures)
+export(get_network_summary)
 export(get_ringbauer_measures)
 export(plot_ergm_bic)
 export(plot_ergm_coef)
 export(plot_ggnet)
 export(plot_leaflet)
 export(plot_ringbauer)
+export(spibder_app)
 importFrom(rlang,":=")
