Added snapshot to app

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -41,12 +41,12 @@ Imports:
     forcats,
     ggnetwork,
     ggplot2,
-    ggrepel,
     harrypotter,
     igraph,
     intergraph,
     janitor,
     leaflet,
+    lubridate,
     purrr,
     readr,
     rlang,
