--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,7 +14,9 @@ export(get_ringbauer_measures)
 export(plot_ergm_bic)
 export(plot_ergm_coef)
 export(plot_ggnet)
+export(plot_homophily)
 export(plot_leaflet)
 export(plot_ringbauer)
+export(plot_single_ergm_coef)
 export(spibder_app)
 importFrom(rlang,":=")
