--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(get_ergm_fc)
 export(get_ergms)
 export(get_network_measures)
 export(get_network_summary)
+export(get_node_info)
 export(get_ringbauer_measures)
 export(plot_ergm_bic)
 export(plot_ergm_coef)
