Added filtering to network

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(convert_pred_ergmterm)
 export(convert_ringbauer_measures)
 export(copy_files)
 export(create_ibd_network)
+export(filter_network)
 export(get_all_models)
 export(get_connected_graph)
 export(get_ergm_bic)
