Added cleaner centrality measures

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,11 +8,11 @@ export(copy_files)
 export(create_ibd_network)
 export(filter_network)
 export(get_all_models)
+export(get_centrality_measures)
 export(get_connected_graph)
 export(get_ergm_bic)
 export(get_ergm_fc)
 export(get_ergms)
-export(get_network_measures)
 export(get_network_summary)
 export(get_node_info)
 export(get_ringbauer_measures)
@@ -24,4 +24,3 @@ export(plot_leaflet)
 export(plot_ringbauer)
 export(plot_single_ergm_coef)
 export(spibder_app)
-importFrom(rlang,":=")
