Added ergm terms

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,34 +33,34 @@ RoxygenNote: 7.3.3
 URL: https://github.com/jonotuke/spIBDerverse, https://jonotuke.github.io/spIBDerverse/
 BugReports: https://github.com/jonotuke/spIBDerverse/issues
 Imports: 
-    broom,
-    colourvalues,
-    dplyr,
-    DT,
     ergm,
-    farver,
-    forcats,
     ggnetwork,
-    ggplot2,
-    harrypotter,
     igraph,
     intergraph,
-    janitor,
     leaflet,
-    lubridate,
-    prompter,
+    shiny
+Suggests: 
+    dplyr,
+    DT,
+    farver,
+    forcats,
+    ggplot2,
+    harrypotter,
+    janitor,
     purrr,
-    readr,
-    rlang,
-    sf,
-    shiny,
-    stats,
     stringr,
     tibble,
     tidyr,
+    lubridate,
+    prompter,
+    readr,
+    rlang,
+    sf,
+    stats,
     tidytext,
-    viridis
-Suggests: 
+    viridis,
+    broom,
+    colourvalues,
     knitr,
     rmarkdown,
     quarto,
