--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(get_node_info)
 export(get_ringbauer_measures)
 export(get_text_font)
 export(label_grp_duplicates)
+export(plot_centrality)
 export(plot_ergm_bic)
 export(plot_ergm_coef)
 export(plot_ggnet)
